修改IC_VodList架構, 並新增近期觀看介面提示(預設為Collapsed)

--- a/AnimationPlayer/AnimationPlayer.csproj
+++ b/AnimationPlayer/AnimationPlayer.csproj
@@ -125,6 +125,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GlobalFunctions\Json.cs" />
     <Compile Include="Models\MessageDialogModel.cs" />
     <Compile Include="Models\VideoPlayerModel.cs" />
     <Compile Include="Objects\CefBrowser.cs" />
