修正變數命名: Link => Href 新增近期觀看動畫提示

--- a/AnimationPlayer/AnimationPlayer.csproj
+++ b/AnimationPlayer/AnimationPlayer.csproj
@@ -126,6 +126,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="GlobalFunctions\Json.cs" />
+    <Compile Include="GlobalFunctions\AnimationRecentWatchJson.cs" />
     <Compile Include="Models\MessageDialogModel.cs" />
     <Compile Include="Models\VideoPlayerModel.cs" />
     <Compile Include="Objects\CefBrowser.cs" />
