--- a/AnimationPlayer/AnimationPlayer.csproj
+++ b/AnimationPlayer/AnimationPlayer.csproj
@@ -144,7 +144,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="GlobalFunctions\Json.cs" />
-    <Compile Include="GlobalFunctions\AnimationRecentWatchJson.cs" />
+    <Compile Include="GlobalFunctions\AnimationObjectJson.cs" />
     <Compile Include="Models\MessageDialogModel.cs" />
     <Compile Include="Models\VideoPlayerModel.cs" />
     <Compile Include="Objects\CefBrowser.cs" />
