--- a/AnimationPlayer/packages.config
+++ b/AnimationPlayer/packages.config
@@ -2,10 +2,6 @@
 <packages>
   <package id="AngleSharp" version="0.12.1" targetFramework="net472" />
   <package id="CalcBinding" version="2.5.2" targetFramework="net472" />
-  <package id="cef.redist.x64" version="75.1.14" targetFramework="net472" />
-  <package id="cef.redist.x86" version="75.1.14" targetFramework="net472" />
-  <package id="CefSharp.Common" version="75.1.141" targetFramework="net472" />
-  <package id="CefSharp.OffScreen" version="75.1.141" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="DynamicExpresso.Core" version="2.3.1" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.0" targetFramework="net472" />
@@ -13,6 +9,8 @@
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="76.0.3809.12600" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net472" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.7.1" targetFramework="net472" />
