--- a/AnimationPlayer/packages.config
+++ b/AnimationPlayer/packages.config
@@ -4,6 +4,7 @@
   <package id="CalcBinding" version="2.5.2" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="DynamicExpresso.Core" version="2.3.1" targetFramework="net472" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
